# python-ci-demo

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_ci_demo/: __init__.py  calculator.py
tests/: test_calculator.py
