[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ci-demo"
version = "0.1.0"
description = "A minimal Python CI/CD demo"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "flake8>=6.0.0"]